# rue

./: .gitignore  Cargo.toml  LICENSE  README.md  main.sym  std.rue  test_autocomplete.rue  test_completion.rue  test_ctrl_space_filtering.rue  test_struct_completion.rue  tests.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: codegen.rs  compile.rs  compiler.rs  context.rs  file.rs  lib.rs  lir.rs  lower.rs  optimize.rs  symbol.rs  type_checker.rs  types.rs
crates/compiler/src/compile/: block.rs  document.rs  expr.rs  generics.rs  item.rs  stmt.rs  ty.rs
crates/compiler/src/compile/expr/: binary.rs  cast.rs  function_call.rs  group.rs  guard.rs  if_expr.rs  literal.rs  path.rs  prefix.rs
crates/compiler/src/compile/item/: function.rs  subtype.rs  type_alias.rs
crates/compiler/src/compile/stmt/: assert.rs  expr.rs  if_stmt.rs  let_binding.rs  raise.rs  return_stmt.rs
crates/compiler/src/compile/ty/: group.rs  path.rs  union.rs
crates/rue-ast/: Cargo.toml
crates/rue-ast/src/: lib.rs
crates/rue-cli/: Cargo.toml
crates/rue-cli/src/: main.rs
crates/rue-clvm/: Cargo.toml
crates/rue-clvm/src/: error.rs  ir.rs  lib.rs  path.rs  run.rs
crates/rue-codegen/: Cargo.toml
crates/rue-codegen/src/: codegen.rs  lib.rs  lir.rs  ops.rs
crates/rue-compiler/: Cargo.toml  stdlib.rue
crates/rue-compiler/src/: Rue.toml  atom.rs  check_unused.rs  codegen.rs  compile.rs  compiler.rs  database.rs  dependency_graph.rs  environment.rs  error.rs  file.rs  hir.rs  ir.rs  lib.rs  lir.rs  lowerer.rs  mir.rs  optimizer.rs  scope.rs  scope_map.rs  std.rue  symbol.rs  symbol_table.rs  syntax_map.rs  tests.rs  ty.rs  value.rs
crates/rue-compiler/src/compile/: binding.rs  block.rs  document.rs  expr.rs  field.rs  generics.rs  imports.rs  item.rs  path.rs  stmt.rs  ty.rs
crates/rue-compiler/src/compile/binding/: list_binding.rs  named_binding.rs  pair_binding.rs  struct_binding.rs
crates/rue-compiler/src/compile/expr/: binary.rs  cast.rs  field_access.rs  function_call.rs  group.rs  guard.rs  if_expr.rs  lambda.rs  list.rs  literal.rs  match_expr.rs  pair.rs  path.rs  prefix.rs  struct_initializer.rs
crates/rue-compiler/src/compile/item/: constant.rs  function.rs  import.rs  module.rs  struct_item.rs  type_alias.rs
crates/rue-compiler/src/compile/stmt/: assert.rs  expr.rs  if_stmt.rs  let_binding.rs  raise.rs  return_stmt.rs  verification.rs
crates/rue-compiler/src/compile/ty/: group.rs  lambda.rs  list.rs  literal.rs  pair.rs  path.rs  union.rs
crates/rue-compiler/src/compiler/: block.rs  builtins.rs  constraint.rs  context.rs  declarations.rs  expr.rs  generic_types.rs  item.rs  path.rs  stmt.rs  symbol_table.rs  ty.rs  unused.rs
crates/rue-compiler/src/database/: comparison.rs  ids.rs  type_system.rs
crates/rue-compiler/src/ir/: codegen.rs  dependency_graph.rs  environment.rs  hir.rs  lir.rs  lowerer.rs  mir.rs  optimizer.rs
crates/rue-compiler/src/optimizer/: dependency_graph.rs  environment.rs
crates/rue-compiler/src/std/: curry_tree_hash.rue  main.rue  merkle.rue  offer.rue  prelude.rue  singleton.rue  tree_hash.rue  utils.rue
crates/rue-compiler/src/value/: guard.rs  guard_path.rs  ty.rs
crates/rue-diagnostic/: Cargo.toml
crates/rue-diagnostic/src/: diagnostic.rs  kind.rs  lib.rs  line_col.rs  name.rs  severity.rs  srcloc.rs
crates/rue-hir/: Cargo.toml
crates/rue-hir/src/: builtins.rs  database.rs  dependency_graph.rs  environment.rs  hir.rs  import.rs  lib.rs  lower.rs  ops.rs  scope.rs  symbol.rs  types.rs  value.rs
crates/rue-hir/src/types/: apply_generics.rs  atom.rs  check.rs  constraint.rs  replace.rs
crates/rue-lexer/: Cargo.toml
crates/rue-lexer/src/: lexer.rs  lib.rs  token.rs  token_kind.rs
crates/rue-lir/: Cargo.toml
crates/rue-lir/src/: atom.rs  codegen.rs  debug_dialect.rs  error.rs  lib.rs  lir.rs  optimize.rs  path.rs
crates/rue-lir/src/optimize/: arg_list.rs  has_path.rs  ops.rs  truthy.rs
crates/rue-lsp/: Cargo.toml
crates/rue-lsp/src/: cache.rs  completion.rs  lib.rs  main.rs
crates/rue-lsp/tests/: completion_test.rs
crates/rue-options/: Cargo.toml
crates/rue-options/src/: compiler_options.rs  find.rs  lib.rs  manifest.rs
crates/rue-parser/: Cargo.toml
crates/rue-parser/src/: ast.rs  error.rs  grammar.rs  language.rs  lib.rs  parser.rs  syntax_kind.rs
crates/rue-parser/src/grammar/: binding.rs  block.rs  document.rs  expr.rs  generics.rs  item.rs  stmt.rs  ty.rs
crates/rue-tests/: Cargo.toml
crates/rue-tests/src/: main.rs
crates/rue-types/: Cargo.toml
crates/rue-types/src/: attributes.rs  builtins.rs  check.rs  compare.rs  extractors.rs  lib.rs  stringify.rs  substitute.rs  subtract.rs  types.rs  unwrap.rs
crates/rue-types/src/attributes/: atom_restrictions.rs  pairs.rs  shape.rs
crates/rue-types/src/compare/: atom.rs  function.rs  pair.rs  unions.rs
crates/rue-types/src/types/: alias.rs  apply.rs  atom.rs  function.rs  generic.rs  pair.rs  structs.rs  unions.rs
crates/rue-typing/: Cargo.toml
crates/rue-typing/src/: bigint.rs  check.rs  comparison.rs  debug_type.rs  difference.rs  lib.rs  map.rs  replace_type.rs  semantic_types.rs  simplify_check.rs  standard_types.rs  stringify.rs  stringify_type.rs  substitute_type.rs  test_tools.rs  ty.rs  type_path.rs  type_system.rs
crates/rue-typing/src/check/: attributes.rs  check_error.rs  check_type.rs  simplify_and.rs  simplify_check.rs  simplify_or.rs  stringify_check.rs
crates/rue-web/: Cargo.toml  docs.json  index.html  input.css  package-lock.json  package.json  prerender.js  tailwind.config.js
crates/rue-web/derive-docs/: Cargo.toml
crates/rue-web/docs/: compiler_design.md  getting-started.md  getting_started.md  introduction.md  operators.md  types.md
crates/rue-web/public/: output.css
crates/rue-web/src/: app.rs  docs.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
crates/rue-web/src/app/: docs.rs
crates/rue-web/style/: output.css
crates/test-runner/: Cargo.toml
crates/test-runner/src/: main.rs
examples/: brainfck.rue  brainfck.yaml  (+36 more)
wasm/: Cargo.toml  package.json  pnpm-lock.yaml
wasm/src/: lib.rs
(+575 files in other folders)
