[package]
name = "rue"
version = "0.1.0"
edition = "2024"

[dependencies]
clvmr = { workspace = true }
clvm_tools_rs = { workspace = true }
anyhow = { workspace = true }
id-arena = { workspace = true }
rue-lexer = { workspace = true }
rue-parser = { workspace = true }
rue-ast = { workspace = true }
rue-compiler = { workspace = true }
rue-lir = { workspace = true }
rue-hir = { workspace = true }
rue-mir = { workspace = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
rue-lexer = { path = "crates/lexer" }
rue-parser = { path = "crates/parser" }
rue-diagnostic = { path = "crates/diagnostic" }
rue-ast = { path = "crates/ast" }
rue-compiler = { path = "crates/compiler" }
rue-lir = { path = "crates/lir" }
rue-mir = { path = "crates/mir" }
rue-hir = { path = "crates/hir" }
anyhow = "1.0.98"
clvm-traits = "0.28.1"
clvm_tools_rs = "0.4.0"
clvmr = "0.16.0"
derive_more = "2.0.1"
expect-test = "1.5.1"
id-arena = "2.2.1"
indexmap = "2.10.0"
itertools = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
rowan = "0.16.1"
thiserror = "2.0.12"
num-bigint = "0.4.6"
