[workspace]
resolver = "3"
members = ["crates/*", "wasm"]

[workspace.dependencies]
rue-lexer = { path = "crates/rue-lexer" }
rue-parser = { path = "crates/rue-parser" }
rue-diagnostic = { path = "crates/rue-diagnostic" }
rue-ast = { path = "crates/rue-ast" }
rue-compiler = { path = "crates/rue-compiler" }
rue-options = { path = "crates/rue-options" }
rue-lir = { path = "crates/rue-lir" }
rue-hir = { path = "crates/rue-hir" }
rue-types = { path = "crates/rue-types" }
anyhow = "1.0.98"
clvm-traits = "0.28.1"
clvm_tools_rs = "0.4.0"
clvmr = "0.16.0"
derive_more = "2.0.1"
expect-test = "1.5.1"
id-arena = "2.2.1"
indexmap = "2.10.0"
itertools = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
paste = "1.0.15"
rowan = "0.16.1"
thiserror = "2.0.12"
num-bigint = "0.4.6"
serde = "1.0.219"
walkdir = "2.5.0"
serde_yml = "0.0.12"
hex = "0.4.3"
clap = "4.5.45"
rstest = "0.26.1"
log = "0.4.27"
env_logger = "0.11.8"
wasm-bindgen = "0.2.102"
console_error_panic_hook = "0.1.7"
