[workspace]
resolver = "3"
members = ["crates/*", "wasm"]

[workspace.package]
readme = "README.md"
keywords = ["chia", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_code = "warn"
unreachable_patterns = "deny"
dead_code = "warn"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
implicit_hasher = "allow"
match_same_arms = "allow"
similar_names = "allow"

[workspace.dependencies]
rue-lexer = { path = "crates/rue-lexer", version = "0.3.0" }
rue-parser = { path = "crates/rue-parser", version = "0.3.0" }
rue-diagnostic = { path = "crates/rue-diagnostic", version = "0.3.0" }
rue-ast = { path = "crates/rue-ast", version = "0.3.0" }
rue-compiler = { path = "crates/rue-compiler", version = "0.3.0" }
rue-options = { path = "crates/rue-options", version = "0.3.0" }
rue-lir = { path = "crates/rue-lir", version = "0.3.0" }
rue-hir = { path = "crates/rue-hir", version = "0.3.0" }
rue-types = { path = "crates/rue-types", version = "0.3.0" }
anyhow = "1.0.98"
clvm-traits = "0.28.1"
clvm_tools_rs = "0.4.0"
clvmr = "0.16.0"
derive_more = "2.0.1"
expect-test = "1.5.1"
id-arena = "2.2.1"
indexmap = "2.10.0"
itertools = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
num-integer = "0.1.46"
paste = "1.0.15"
rowan = "0.16.1"
thiserror = "2.0.12"
num-bigint = "0.4.6"
serde = "1.0.219"
walkdir = "2.5.0"
serde_yml = "0.0.12"
hex = "0.4.3"
clap = "4.5.45"
rstest = "0.26.1"
log = "0.4.27"
env_logger = "0.11.8"
wasm-bindgen = "0.2.102"
console_error_panic_hook = "0.1.7"
sha2 = "0.10.9"
tokio = "1.47.1"
tower-lsp = "0.20.0"
