[package]
name = "rue-wasm"
version = "0.3.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "WASM bindings for the Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rue-compiler = { workspace = true }
rue-options = { workspace = true }
rue-diagnostic = { workspace = true }
clvmr = { workspace = true }
clvm_tools_rs = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
