[package]
name = "rue-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
rue-parser = { workspace = true }
rue-ast = { workspace = true }
rue-diagnostic = { workspace = true }
clvmr = { workspace = true }
clvm-traits = { workspace = true }
id-arena = { workspace = true }
rowan = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
rue-lexer = { workspace = true }
expect-test = { workspace = true }
