[package]
name = "rue-cli"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI tool for the Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/rue"
repository = "https://github.com/rigidity/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
rue-parser = { workspace = true }
rue-compiler = { workspace = true }
rue-clvm = { workspace = true }
clvmr = { workspace = true }
hex = { workspace = true }

[[bin]]
name = "rue"
path = "src/main.rs"
