[package]
name = "rue-cli"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "rue"
path = "src/main.rs"

[dependencies]
rue-compiler = { workspace = true }
rue-options = { workspace = true }
rue-diagnostic = { workspace = true }
clvmr = { workspace = true }
clvm_tools_rs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
