[package]
name = "rue-cli"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "A CLI tool for invoking the Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "rue"
path = "src/main.rs"

[dependencies]
rue-compiler = { workspace = true }
rue-options = { workspace = true }
rue-diagnostic = { workspace = true }
rue-lir = { workspace = true }
clvmr = { workspace = true }
clvm-utils = { workspace = true }
chialisp = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
hex = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
