[package]
name = "rue-clvm"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "CLVM utilities for the Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/rue"
repository = "https://github.com/rigidity/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
clvmr = { workspace = true }
clvmr_old = { workspace = true }
clvm_tools_rs = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
