[package]
name = "rue-compiler"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "The Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/rue"
repository = "https://github.com/rigidity/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-parser = { workspace = true }
rue-clvm = { workspace = true }
rue-typing = { workspace = true }
clvmr = { workspace = true }
id-arena = { workspace = true }
indexmap = { workspace = true }
rowan = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
