[package]
name = "rue-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
rue-parser = { workspace = true }
rue-lexer = { workspace = true }
rue-ast = { workspace = true }
rue-diagnostic = { workspace = true }
rue-options = { workspace = true }
rue-hir = { workspace = true }
rue-lir = { workspace = true }
rue-types = { workspace = true }
id-arena = { workspace = true }
rowan = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
clvmr = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
rue-lexer = { workspace = true }
expect-test = { workspace = true }
