[package]
name = "rue-compiler"
version = "0.8.1"
edition = "2024"
license = "Apache-2.0"
description = "A compiler for the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-parser = { workspace = true }
rue-lexer = { workspace = true }
rue-ast = { workspace = true }
rue-diagnostic = { workspace = true }
rue-options = { workspace = true }
rue-hir = { workspace = true }
rue-lir = { workspace = true }
rue-types = { workspace = true }
id-arena = { workspace = true }
rowan = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
hex = { workspace = true }
clvmr = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
include_dir = { workspace = true }

[dev-dependencies]
rue-lexer = { workspace = true }
expect-test = { workspace = true }
