[package]
name = "rue-diagnostic"
version = "0.8.3"
edition = "2024"
license = "Apache-2.0"
description = "All of the potential diagnostics that can be emitted by the Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
