[package]
name = "rue-hir"
version = "0.3.0"
edition = "2024"

[dependencies]
rue-options = { workspace = true }
rue-parser = { workspace = true }
rue-lir = { workspace = true }
rue-types = { workspace = true }
id-arena = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
