[package]
name = "rue-hir"
version = "0.8.3"
edition = "2024"
license = "Apache-2.0"
description = "Provides a high-level intermediate representation of the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-options = { workspace = true }
rue-lir = { workspace = true }
rue-types = { workspace = true }
rue-diagnostic = { workspace = true }
id-arena = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
log = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
