[package]
name = "rue-lexer"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Transforms Rue source code into tokens."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/rue"
repository = "https://github.com/rigidity/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true
