[package]
name = "rue-lexer"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "A lexer for the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
expect-test = { workspace = true }
