[package]
name = "rue-lir"
version = "0.1.0"
edition = "2024"

[dependencies]
id-arena = { workspace = true }
clvmr = { workspace = true }
clvm-traits = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
clvm_tools_rs = { workspace = true }
