[package]
name = "rue-lir"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
description = "Provides a low-level intermediate representation that compiles to CLVM."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
id-arena = { workspace = true }
clvmr = { workspace = true }
clvm-traits = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
clvm_tools_rs = { workspace = true }
