[package]
name = "rue-lsp"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "A language server protocol (LSP) implementation for the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[lib]
name = "rue_lsp"
path = "src/lib.rs"

[[bin]]
name = "rue-lsp"
path = "src/main.rs"

[dependencies]
rue-compiler = { workspace = true }
rue-diagnostic = { workspace = true }
rue-hir = { workspace = true }
rue-options = { workspace = true }
rue-types = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true }
