[package]
name = "rue-options"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Provides a way to configure the Rue compiler."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true
