[package]
name = "rue-parser"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Parses Rue tokens into an AST."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/rigidity/rue"
repository = "https://github.com/rigidity/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-lexer = { workspace = true }
indexmap = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
rowan = { workspace = true }
