[package]
name = "rue-parser"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "A parser for the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-lexer = { workspace = true }
rue-diagnostic = { workspace = true }
rowan = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
num-traits = { workspace = true }
num-derive = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
