[package]
name = "rue-tests"
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
rue-compiler = { workspace = true }
rue-options = { workspace = true }
rue-diagnostic = { workspace = true }
clvmr = { workspace = true }
clvm_tools_rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
serde_yml = { workspace = true }
env_logger = { workspace = true }
