[package]
name = "rue-tests"
version = "0.8.4"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A collection of tests for the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-compiler = { workspace = true }
rue-options = { workspace = true }
rue-diagnostic = { workspace = true }
rue-lir = { workspace = true }
clvmr = { workspace = true }
chialisp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
