[package]
name = "rue-types"
version = "0.8.2"
edition = "2024"
license = "Apache-2.0"
description = "A type system for the Rue programming language."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/xch-dev/rue"
repository = "https://github.com/xch-dev/rue"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
rue-diagnostic = { workspace = true }
id-arena = { workspace = true }
indexmap = { workspace = true }
clvmr = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rstest = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
log = { workspace = true }
