[package]
name = "rue-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "thaw/hydrate",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "thaw/ssr",
    "leptos-use/ssr",
]

[dependencies]
leptos = "0.6.11"
axum = { version = "0.7.5", optional = true }
tokio = { version = "1.37.0", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
leptos_axum = { version = "0.6.11", optional = true }
leptos_meta = "0.6.11"
leptos_router = "0.6.11"
console_error_panic_hook = "0.1.7"
leptos_icons = "0.3.0"
thaw = "0.3.0"
icondata = "0.3.0"
leptos-use = "0.10.8"
http = "1.1.0"
thiserror = "1.0.59"
wasm-bindgen = "0.2.92"
markdown = "0.3.0"
