[package]
name = "rue-test-runner"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rue-lexer = { workspace = true }
rue-parser = { workspace = true }
rue-ast = { workspace = true }
rue-compiler = { workspace = true }
rue-lir = { workspace = true }
rue-hir = { workspace = true }
rue-diagnostic = { workspace = true }
clvmr = { workspace = true }
clvm_tools_rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
id-arena = { workspace = true }
walkdir = { workspace = true }
serde_yml = { workspace = true }
