[package]
name = "rue-test-runner"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rue-compiler = { workspace = true }
clvmr = { workspace = true }
clvm_tools_rs = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
serde_yml = { workspace = true }
